# joggingthecpppath

./: CMakeLists.txt  Doxyfile  Factory.cpp  Makefile  README  cafe.cpp  composite.cpp  coverage.sh  diner.cpp  ducks.cpp  greet.c  greet.cpp  main.cpp  weather.cpp
apps/: greet.cpp
cmake_modules/: Finddl.cmake
coffee/: Beverage.hpp  CMakeLists.txt  DarkRoast.cpp  DarkRoast.hpp  Decaf.cpp  Decaf.hpp  Espresso.cpp  Espresso.hpp  HouseBlend.cpp  HouseBlend.hpp
commandPattern/: FlipDownCommand.hpp  Switch.hpp
composite/: CompositeGraphic.cpp  CompositeGraphic.hpp  Ellipse.cpp  composite.cpp
compositePattern/: CMakeLists.txt  CompositeGraphic.cpp  CompositeGraphic.hpp  Ellipse.cpp  Ellipse.hpp  IGraphic.hpp
decoratorPattern/: Beverage.cpp  Beverage.hpp  DarkRoast.cpp  DarkRoast.hpp  Decaf.cpp  Espresso.hpp
design_patternslib/: CMakeLists.txt  Doxyfile  design_patternslib.cfg
design_patternslib/commandPattern/: CMakeLists.txt  FlipUpCommand.hpp  ICommand.hpp  Light.hpp  prg
design_patternslib/compositePattern/: CMakeLists.txt  CompositeGraphic.cpp
design_patternslib/decorator/: CMakeLists.txt  Decaf.hpp  Espresso.cpp
design_patternslib/decoratorPattern/: CMakeLists.txt
design_patternslib/dynamicBehaviorDemo/: Base.hpp  CMakeLists.txt  Decoy.cpp
design_patternslib/dynamicBehaviorDemo/behaviours/: Base.hpp  Squeak.cpp
design_patternslib/examples/: Factory.cpp  cafe.cpp  command.cpp  composite.cpp  diner.cpp  ducks.cpp  simulator.cpp  weather.cpp
design_patternslib/factory/: CheezePizza.cpp  Factory.cpp  Pizza.cpp  pizzashop.cpp  pizzashop.hpp
design_patternslib/iteratorPattern/: CMakeLists.txt  Waitress.hpp
design_patternslib/observer/: CMakeLists.txt  CurrentConditionsDisplay.hpp
design_patternslib/observerPattern/: CMakeLists.txt  Observer.hpp  WeatherData.cpp
design_patternslib/simulator/: CMakeLists.txt  DuckFactory.cpp  DuckSimulator.hpp  GooseAdaptor.hpp  IQuackObservable.hpp  MallardDuck.hpp  Observable.hpp  Quackable.hpp  Quackologist.hpp  simulator.cpp
design_patternslib/strategy/: Base.hpp  Decoy.hpp  Redhead.hpp
design_patternslib/strategy/behaviours/: Squeak.hpp
design_patternslib/tests/: CMakeLists.txt  hellotest.cpp
ducks/: Base.hpp  Decoy.hpp  Mallard.hpp  Redhead.hpp  Rubber.hpp
ducks/behaviours/: Flyable.hpp  Quackable.hpp
ducky/: Base.cpp  Base.hpp  CMakeLists.txt  Decoy.cpp  Decoy.hpp  Mallard.cpp  Mallard.hpp  Redhead.cpp  Redhead.hpp  Rubber.cpp  Rubber.hpp
ducky/behaviours/: Flyable.cpp  Flyable.hpp  Quackable.cpp  Quackable.hpp  Squeak.hpp
dynamicBehaviorDemo/: Base.cpp  Base.hpp  Redhead.cpp  Rubber.cpp
dynamicBehaviorDemo/behaviours/: Base.cpp
factory/: CMakeLists.txt  CheezePizza.hpp  Pizza.hpp  pizzashop.hpp
observer/: Observer.cpp
observerPattern/: CurrentConditionsDisplay.cpp  StatsKeeper.hpp  Subject.cpp
simulator/: AbstractDuckFactory.hpp  CMakeLists.txt  CountingDuckFactory.cpp  DuckCall.hpp  DuckFactories.hpp  Flock.hpp  Goose.hpp  Observer.hpp  QuackCounter.cpp  QuackCounter.hpp  RedheadDuck.hpp  RubberDuck.hpp
strategy/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt~
users/: 4.txt
weathery/: CMakeLists.txt  CurrentConditionsDisplay.cpp  CurrentConditionsDisplay.hpp  Observer.cpp  Observer.hpp  ObserverPattern.hpp  StatsKeeper.cpp  StatsKeeper.hpp  Subject.hpp  WeatherData.cpp  WeatherData.hpp
well-managed-collections/: CMakeLists.txt  DinerMenu.hpp  MenuItem.hpp  PancakeHouseMenu.hpp  Waitress.hpp  diner.cpp
